# gp-ai-projects

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  API_JSON_ENDPOINTS.md  CLAUDE.md  CODEBASE_COMPLIANCE_REPORT.md  Dockerfile.lambda  MIGRATION_NOTES.md  Makefile  README.md  README_API.md  VERCEL_DEPLOYMENT.md  api_wrapper.py  conftest.py  deploy_lambda.sh  jackson-WI_2026-04-21_briefing.json  lambda_handler.py  log.txt  mypy-strict.ini  mypy.ini  pyproject.toml  requirements.txt  requirements_api.txt  run_api.py  setup-dev.sh  slack_example.py  test_json_endpoints.py  vercel.json
briefing_poc/: README.md  pyproject.toml
briefing_poc/collectors/: boarddocs.py  budget_linc.py  escribemeetings.py  haystaq_voter.py  legistar.py
briefing_poc/docs/: data-sources.md  project-overview.md  scaling-and-onboarding.md  technical-architecture.md
briefing_poc/scripts/: 01_collect_legislative.py  02_collect_budget.py  03_extract_pdfs.py  04_run_analysis.py  05_assemble_briefing.py  06_collect_constituent_data.py  06b_map_topics_to_issues.py  07_council_vs_constituent.py  08_collect_discussions.py  09_generate_quick_wins.py  10_chat.py  city_config.py  utils.py
broker/: ARCHITECTURE.md  Dockerfile  README.md  RUNBOOK.md  auth.py  browser_fetcher.py  callback_sender.py  clerk_client.py  data_query_tracker.py  dynamodb_client.py  main.py  pii_scanner.py  pyproject.toml  sanitizer.py  secrets.py  sql_rewriter.py  ssrf_guard.py  url_allowlist.py
broker/endpoints/: agent_mcp_proxy.py  anthropic_proxy.py  artifact_publish.py  artifact_read.py  braintrust_proxy.py  databricks_query.py  delete_run_token.py  experiment_manifest.py  http_fetch.py  inputs_read.py  mint_run_token.py  params_read.py  pdf_fetch.py  run_status.py  upload_logs.py
broker/tests/: conftest.py  test_agent_mcp_proxy.py  test_anthropic_proxy.py  test_artifact_publish.py  test_artifact_read.py  test_auth.py  test_braintrust_proxy.py  test_braintrust_proxy_contract.py  test_broker_sdk_bridge.py  test_browser_fetcher.py  test_browser_fetcher_live.py  test_callback_sender.py  test_callback_wire_contract.py  test_clerk_client.py  test_data_query_tracker.py  test_databricks_query.py  test_delete_run_token.py  test_dynamodb_client.py  test_experiment_manifest.py  test_http_fetch.py  test_http_head_contract.py  test_inputs_read.py  test_main.py  test_mint_run_token.py  test_mint_to_fetch_e2e.py  test_params_read.py  test_pdf_fetch.py  test_pii_scanner.py  test_run_status.py  test_sanitizer.py  test_secrets.py  test_sql_rewriter.py  test_ssrf_guard.py  test_upload_logs.py  test_url_allowlist.py
browser_service/: Dockerfile  pyproject.toml
browser_service/app/: browser_pool.py  config.py  main.py  models.py  stealth.py  validation.py
browser_service/tests/: test_browser_pool.py  test_config.py  test_main.py  test_models.py  test_stealth.py
engineer_agent/: .env.example  ARCHITECTURE.md  Dockerfile  FUTURE_DESIGN_NOTES.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
engineer_agent/agent/: __init__.py  config.py  main.py
engineer_agent/scripts/: build.sh  post_to_clickup.py  query_db.py  run_agent.py
hubspot_ddhq_match/: README.md  build.sh  data_cleaning.py  data_extraction.py  enrich_runoffs.py  generate_cleaned_embeddings.py  parallel_production_matcher.py  pyproject.toml  retry_errors.py  run_pipeline.py  temporal_filtering.py  test_embedding_costs.py
hubspot_ddhq_match/deployment/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  upload_to_s3.py
hubspot_ddhq_match/google_sheets_matcher/: README.md  data_cleaning.py  data_extraction.py  generate_embeddings.py  parallel_production_matcher.py  run_full_pipeline.py  temporal_filtering.py
meeting_pipeline/: .env.example  .gitignore  Dockerfile.discover  Dockerfile.lambda  README.md  Terry Users2.csv  body_validation.py  pilot_registry.py  pyproject.toml  terry-cities-status.csv
meeting_pipeline/collection_agent/: __init__.py  config.py  discovery_agent.py  document_verifier.py  firecrawl_utils.py  manifest.py  models.py  notification_log.py  router.py  run.py  storage.py
meeting_pipeline/collectors/: boarddocs.py  civicclerk.py  civicplus_scraper.py  escribemeetings.py  generic_html_scraper.py  granicus_scraper.py  legistar.py  municode.py  novus_scraper.py
meeting_pipeline/docs/: city-collection-notes.md  city-viability-research.md  collection-agent-failure-analysis.md  data-format-proposal.md  deploy-checklist.md  infrastructure-implementation.md  infrastructure-plan.md  pilot-sync-status.md  pipeline-accuracy-review.md  pipeline-improvements.md  pipeline-restructuring-plan.md  pipeline-status.md  qa-integration-plan.md  search-engine-comparison.md
meeting_pipeline/lambda_handlers/: __init__.py  _secrets.py  discover.py  process.py  scan.py
meeting_pipeline/prompts/: briefing.py  extraction.py
meeting_pipeline/scripts/: check_city.py  collect_haystaq_batch.py  collect_pilot_batch.py  extract_and_normalize.py  generate_briefing.py  generate_manifests.py  generate_meeting_queue.py  generate_terry_status.py  onboard_cities.py  rerank_sources.py  run_pipeline.py  run_serve_users_pipeline.py  scan_meeting_schedule.py  source_discover.py  update_csv_meeting_dates.py  verify_briefings.py  verify_city_sources.py
meeting_pipeline/shared/: __init__.py  body_validation.py  config.py  constants.py  date_utils.py  discovery_helpers.py  firecrawl_client.py  generic_agenda_scanner.py  manifest.py  models.py  notification_log.py  storage.py  url_utils.py  verify_source.py
meeting_pipeline/stages/: __init__.py  orchestrator.py
meeting_pipeline/tests/: test_find_best_pdf.py  (+5 more)
meeting_qa/: Dockerfile  lambda_handler.py  pyproject.toml
pmf_engine/: Dockerfile  PLAN.md  entrypoint.sh  pyproject.toml  sitecustomize.py
shared/: README_LLMClient.md  ai_template_client.py  aws_clients.py  braintrust.py  browser_client.py  clickup_client.py  databricks_client.py  google_sheets_client.py  llm.py  llm_gemini.py  llm_gemini_3.py  logger.py  metrics.py  pyproject.toml  slack_client.py  tavily_client.py
(+637 files in other folders)
