[project]
name = "gp-ai-projects"
version = "0.1.0"
description = "AI projects at goodparty"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "tavily-python>=0.7.8",
    "openai>=1.93.1",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "reportlab>=4.4.2",
    "google-genai>=1.24.0",
    "databricks-sql-connector>=4.0.5",
    "pandas>=2.2.3",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "faiss-cpu>=1.12.0",
    "numpy>=2.3.1",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.184.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_generated_campaign_plan", "shared"]
