[project]
name = "gp-ai-projects"
version = "0.1.0"
description = "AI projects at goodparty - workspace root"
readme = "README.md"
requires-python = ">=3.11"

# Workspace root - for local development, install all dependencies
dependencies = [
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "tavily-python>=0.7.8",
    "openai>=1.93.1",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "reportlab>=4.4.2",
    "google-genai>=1.56.0",
    "databricks-sql-connector>=4.0.5",
    "pandas>=2.2.3",
    "pyarrow>=21.0.0",
    "tqdm>=4.67.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.20",
    "faiss-cpu>=1.12.0",
    "numpy>=2.3.1",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.10.0",
    "scipy>=1.15.0",
    "umap-learn>=0.5.7",
    "plotly>=5.27.0",
    "seaborn>=0.13.2",
    "google-auth>=2.40.3",
    "google-auth-oauthlib>=1.2.2",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.184.0",
    "hdbscan>=0.8.40",
    "aiohttp>=3.11.11",
    "boto3>=1.40.50",
    "spacy>=3.8.7",
    "pillow>=10.0.0",
    "braintrust>=0.12.1",
    "claude-agent-sdk==0.2.87",
    "slack-sdk>=3.39.0",
    "anthropic>=0.25.0",
    "openpyxl>=3.1.0",
    "pymupdf>=1.27.2.2",
    "beautifulsoup4>=4.14.3",
    "firecrawl-py>=4.22.3",
    "sqlglot>=30.4.3",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
discovery = [
    "exa-py>=2.11.0",
]
dev = [
    "mypy>=1.11.0",
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.workspace]
members = ["shared", "serve/v1_pipeline", "hubspot_ddhq_match", "clickup_bot", "engineer_agent", "meeting_pipeline", "meeting_qa", "pmf_engine", "broker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ai_generated_campaign_plan", "shared"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # simplify (unnecessary complexity)
    "RET", # return statement checks
    "PTH", # use pathlib instead of os.path
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
# Stricter rules only enforced on meeting_pipeline — ignore elsewhere
"shared/**" = ["SIM", "RET", "PTH"]
"campaign_plan_lambda/**" = ["SIM", "RET", "PTH"]
"ai_generated_campaign_plan/**" = ["SIM", "RET", "PTH"]
"engineer_agent/**" = ["SIM", "RET", "PTH"]
"hubspot_ddhq_match/**" = ["SIM", "RET", "PTH"]
"serve/**" = ["SIM", "RET", "PTH"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "braintrust[cli]>=0.12.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "types-pyyaml>=6.0.12.20250915",
    "moto[s3,sqs]>=5.0.0",
    "jsonschema>=4.20.0",
]
campaign-plan-lambda = [
    "google-genai>=1.56.0",
    "braintrust>=0.12.1",
    # Used by shared/braintrust.py for local dev .env loading; was a
    # transitive of braintrust<0.12 and stopped being one after the 0.16
    # bump, so we now declare it explicitly.
    "python-dotenv>=1.1.1",
]
