[project]
name = "gp-briefing-poc"
version = "0.1.0"
description = "Elected official briefing generator - multi-city POC"
requires-python = ">=3.11"
dependencies = [
    "gp-shared",
    "httpx>=0.28.1",
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "pandas>=2.2.3",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "google-genai>=1.56.0",
]

[tool.uv.sources]
gp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["briefing_poc"]
