[project]
name = "gp-broker"
version = "0.1.0"
description = "Agent-traffic proxy: auth + scope tickets + Anthropic/Databricks proxies + artifact store. Consumers pass experiment_id (= run-type-id) and organization_slug (= scope-owner-id) at mint-token time; broker is agnostic to their domain semantics."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "boto3>=1.40.50",
    "httpx>=0.28.1",
    "sqlglot>=30.4.3",
    "python-multipart>=0.0.20",
    "pydantic>=2.0.0",
    "databricks-sql-connector>=4.0.5",
    "playwright>=1.59.0,<1.60.0",
    "tf-playwright-stealth>=1.2.0,<2.0.0",
]
