[project]
name = "gp-browser-service"
version = "0.1.0"
description = "Stealth browser rendering service for VPC-internal use"
requires-python = ">=3.11"
dependencies = [
    "gp-shared",
    "fastapi>=0.116.0",
    "uvicorn>=0.35.0",
    "playwright>=1.49.0",
    "playwright-stealth>=1.0.6",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.uv.sources]
gp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
