[project]
name = "meeting-pipeline"
version = "0.1.0"
description = "Multi-city municipal meeting data collection pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "PyMuPDF>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.1",
    "google-genai>=1.56.0",
    "beautifulsoup4>=4.12.0",
    "boto3>=1.34.0",
    "firecrawl-py>=1.0.0",
    "gp-shared",
]

[project.optional-dependencies]

[tool.uv.sources]
gp-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "meeting-pipeline[discover]",
]
