[project]
name = "meeting-qa"
version = "0.1.0"
description = "QA audit module for AI-generated meeting briefings"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "openpyxl>=3.1.0",
    "anthropic>=0.25.0",
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "tqdm>=4.0.0",
    "boto3>=1.34.0",
    "pymupdf>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qa"]
